# rsomics-tin

./: Cargo.toml  README.md
benches/: bench.rs  tin.rs
src/: bed.rs  cli.rs  lib.rs  main.rs  model.rs  sample.rs  score.rs  stats.rs
tests/: compat.rs
tests/golden/: genes.bed12  rseqc.summary.txt  rseqc.tin.xls  test.bam  test.bam.bai
