[package]
name = "rsomics-tin"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-tin"
authors = ["Zane Leong <efd@live.com>"]
description = "Transcript Integrity Number (TIN) for RNA-seq QC — Rust port of RSeQC tin.py"

[[bin]]
name = "rsomics-tin"
path = "src/main.rs"


[lib]
name = "rsomics_tin"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noodles = { version = "0.110", features = ["sam", "bam", "bgzf", "core"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "tin"
harness = false
